--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -10,11 +10,10 @@
   <div>
     <h2>Shortened URLs</h2>
       <% for(var path in urls) { %>
-      <li><%= urls[path] %> - <%= path %>
-        <form action='/urls_method=DELETE' method='POST' value="DELETE">
-          <input type='submit' value='DELETE'>
+        <form action='/urls/<%= path %>/delete?_method=DELETE' method='POST' value="DELETE">
+          <input type='submit' value='Delete'>
+          <a><%= path %> --> <%= urls[path] %></a>
         </form>
-      </li>
       <% }; %>
     <a href='/urls/new'><p>Shorten URL</p></a>
   </div>
