Added cookie parser support

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,7 +8,7 @@
   <% } else { %>
     <form action='/logout' method='POST'>
       <input type='submit' value='Logout'>
-      <a><%= username.replace('username=', '') %></a>
+      <a><%= username %></a>
     </form>
   <% } %>
 </div>
