--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,14 +1,5 @@
 <div class="jumbotron">
   <h1>TinyApp</h1>
-  <% if(!username) { %>
-    <form action='/login' method='POST'>
-      <input type='text' name='username' placeholder='Username'>
-      <input type='submit' value='Submit'>
-    </form>
-  <% } else { %>
-    <form action='/logout' method='POST'>
-      <input type='submit' value='Logout'>
-      <a><%= username %></a>
-    </form>
-  <% } %>
+  <a href='/login'>Login</a>
+  <a href='/register'>Register</a>
 </div>
