--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -4,12 +4,12 @@
     <% include ./partials/_head %>
   </head>
 
-  <body style="font-size:20px; padding:50px;">
+  <body>
     <% include partials/_header %>
     <form action="/register" method="POST">
       <input type="email" name="email" placeholder="email">
       <input type="password" name="password" placeholder="password">
-      <input type="submit" value="Submit">
+      <input type="submit" value="Register">
     </form>
   </body>
 
