--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,6 @@
 <div class="jumbotron">
   <h1>TinyApp</h1>
-  <a href='/login'>Login</a>
+  <a href='/login'><% if(user) { %>Logout<% } else { %>Login<% } %></a>
   <a href='/register'>Register</a>
+  <a> <% if(user) { %> <%=user.email%> <% } %> </a>
 </div>
