--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -9,13 +9,17 @@
   <% include ./partials/_header %>
   <div>
     <h2>Shortened URL</h2>
+    <% if(user && url.userId === user.id) { %>
       <p>Here is the short URL:</p>
-        <li><%= shortUrl %> --> <%= url.longUrl %></li>
-        <form action='/urls/<%= shortUrl %>?_method=PUT' method='POST'>
-          <label for:"longURL">Enter an updated URL:</label>
-          <input id='longURL' type='text' name='longURL' value='<%= url.longUrl %>' style='width: 300px'>
-          <input type='submit' value='Update'>
-        </form>
+      <li><%= shortUrl %> --> <%= url.longUrl %></li>
+      <form action='/urls/<%= shortUrl %>?_method=PUT' method='POST'>
+        <label for:"longURL">Enter an updated URL:</label>
+        <input id='longURL' type='text' name='longURL' value='<%= url.longUrl %>' style='width: 300px'>
+        <input type='submit' value='Update'>
+      </form>
+    <% } else { %>
+      <h2>You don't have permission to edit this URL</h2>
+    <% } %>
       <a href="/urls"><p>Go Back to URLs</p></a>
   </div>
 </body>
