--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -8,11 +8,11 @@
       <form action='/login' method='POST'>
         <input type='email' name='email' placeholder='email'>
         <input type='password' name='password' placeholder='password'>
-        <input type='submit' value='Login'>
+        <input class='btn-primary' type='submit' value='Login'>
       </form>
     <% } else { %>
       <form action='/logout' method='POST'>
-        <input type='submit' value='Logout'>
+        <input class='btn-primary' type='submit' value='Logout'>
       </form>
     <% } %>
   </body>
