--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -6,10 +6,10 @@
 
   <body>
     <% include partials/_header %>
-    <form action="/urls" method="POST" style="margin:150px;">
-      <label for="longURL">Enter a URL:</label>
-      <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
-      <input type="submit" value="Submit">
+    <form action='/urls' method='POST'>
+      <label for='longURL'>Enter a URL:</label>
+      <input id='longURL' type='text' name='longURL' placeholder='http://'>
+      <input class='btn btn-primary' type='submit' value='Submit'>
     </form>
   </body>
 
