--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -6,10 +6,32 @@
 
   <body>
     <% include partials/_header %>
+    <div class='container'>
+      <h2>Register</h2>
+      <form class='form-horizontal'>
+        <div class='form-group'>
+          <label class='control-label col-sm-2' for='email'>Email:</label>
+          <div class='col-sm-6'>
+            <input type="email" name="email" placeholder="Enter email">
+          </div>
+          <div class='col-sm-4'>
+          </div>
+        </div>
+        <div class='form-group'>
+          <label class='control-label col-sm-2' for='email'>Email:</label>
+          <div class='col-sm-6'>
+            <input type="password" name="password" placeholder="password">
+          </div>
+          <div class='col-sm-4'>
+          </div>
+        </div>
+        <div class='form-group'>
+          <div class='col-sm-10'>
+            <input type="email" name="email" placeholder="Enter email">
+          </div>
+        </div>
     <form action="/register" method="POST">
-      <input type="email" name="email" placeholder="email">
-      <input type="password" name="password" placeholder="password">
-      <input type="submit" value="Register">
+      <input class='btn-primary' type="submit" value="Register">
     </form>
   </body>
 
