More visual updates, fixed the broken form submission with /register and added hasing to passwords

--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -4,17 +4,39 @@
     <% include ./partials/_head %>
   </head>
     <% include ./partials/_header %>
-    <% if(!user) { %>
-      <form action='/login' method='POST'>
-        <input type='email' name='email' placeholder='email'>
-        <input type='password' name='password' placeholder='password'>
-        <input class='btn-primary' type='submit' value='Login'>
-      </form>
-    <% } else { %>
-      <form action='/logout' method='POST'>
-        <input class='btn-primary' type='submit' value='Logout'>
-      </form>
-    <% } %>
+    <div class='container'>
+      <h2>Login</h2>
+      <% if(!user) { %>
+        <form class='form-horizontal' action='/login' method='POST'>
+          <div class='form-group'>
+            <label class='control-label col-sm-2' for='email'>Email:</label>
+            <div class='col-sm-6'>
+              <input class='form-control' id='email' type="email" name="email" placeholder="Enter email">
+            </div>
+            <div class='col-sm-4'>
+            </div>
+          </div>
+          <div class='form-group'>
+            <label class='control-label col-sm-2' for='pwd'>Password:</label>
+            <div class='col-sm-6'>
+              <input class='form-control' id='pwd' type="password" name="password" placeholder="password">
+            </div>
+            <div class='col-sm-4'>
+            </div>
+          </div>
+          <div class='form-group'>
+            <div class='col-sm-offset-2'>
+              <input class='btn btn-primary' type='submit' value='Login'>
+            </div>
+          </div>
+        </form>
+      <% } else { %>
+        <form class='form-horizontal' action='/logout' method='POST'>
+          <div class='form-group'>
+            <input class='btn btn-primary' type='submit' value='Logout'>
+          </div>
+        </form>
+      <% } %>
   </body>
 
 </html>
