--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <a>TinyApp</a>
   <div class='text-right'>
-    <span class='icon-bar'></span><a> <% if(user) { %> <%=user.email%> <% } %> </a>
+    <a> <% if(user) { %> <%=user.email%> <% } %> </a>
     <a href='/login' class='btn btn-default' role='button'><% if(user) { %>Logout<% } else { %>Login<% } %></a>
     <a href='/register' class='btn btn-default' role='button'>Register</a>
   </div>
