--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -8,30 +8,29 @@
     <% include partials/_header %>
     <div class='container'>
       <h2>Register</h2>
-      <form class='form-horizontal'>
+      <form class='form-horizontal' action='/register' method='POST'>
         <div class='form-group'>
           <label class='control-label col-sm-2' for='email'>Email:</label>
           <div class='col-sm-6'>
-            <input type="email" name="email" placeholder="Enter email">
+            <input class='form-control' id='email' type="email" name="email" placeholder="Enter email">
           </div>
           <div class='col-sm-4'>
           </div>
         </div>
         <div class='form-group'>
-          <label class='control-label col-sm-2' for='email'>Email:</label>
+          <label class='control-label col-sm-2' for='pwd'>Password:</label>
           <div class='col-sm-6'>
-            <input type="password" name="password" placeholder="password">
+            <input class='form-control' id='pwd' type="password" name="password" placeholder="password">
           </div>
           <div class='col-sm-4'>
           </div>
         </div>
         <div class='form-group'>
-          <div class='col-sm-10'>
-            <input type="email" name="email" placeholder="Enter email">
+          <div class='col-sm-offset-2 col-sm-10'>
+            <input class='btn btn-primary' type="submit" value="Register">
           </div>
         </div>
     <form action="/register" method="POST">
-      <input class='btn-primary' type="submit" value="Register">
     </form>
   </body>
 
