--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -7,19 +7,19 @@
 
 <body>
   <% include ./partials/_header %>
-  <h2 class='text-center'>Shortened URLs</h2>
+  <h2 class='text-center'>Your Shortened URLs:</h2>
   <% if(user) {
     urls.forEach( function(url) { %>
-    <div class='container'>
+    <div class='container text-center'>
       <div class='row'>
         <ul class='list-group'>
           <li class='list-group-item'>
-            <div class='col-sm-6 text-right'>
+            <div>
               <form action='/urls/<%= url.shortUrl %>/delete?_method=DELETE' method='POST' value="Delete">
-                <a><%= url.shortUrl %> --> <%= url.longUrl %></a>
+                <p><%= url.shortUrl %> --> <%= url.longUrl %></p>
             </div>
-            <div class='col-sm-6'>
-                <a class='text-center' href='/urls/<%= url.shortUrl %>'>Edit</a>
+            <div>
+                <a href='/urls/<%= url.shortUrl %>'>Edit</a>
                 <input class='btn btn-danger' type='submit' value='Delete'>
               </form>
             </div>
@@ -29,9 +29,13 @@
     </div>
   <% });
   } else { %>
-  <h2>Please Login!</h2>
+    <div class='container text-center'>
+      <h2>Please Login!</h2>
+    </div>
   <% } %>
-  <a href='/urls/new' class='text-center'>Shorten URL</a>
+  <div class='container text-center'>
+    <a href='/urls/new' class='text-center'>Shorten a URL</a>
+  </div>
 </body>
 
 </html>
