--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -6,11 +6,19 @@
 
   <body>
     <% include partials/_header %>
-    <form action='/urls' method='POST'>
-      <label for='longURL'>Enter a URL:</label>
-      <input id='longURL' type='text' name='longURL' placeholder='http://'>
-      <input class='btn btn-primary' type='submit' value='Submit'>
-    </form>
+    <div class='container text-center'>
+      <form class='form-horizontal' action='/urls' method='POST'>
+        <div class='form-group'>
+          <label class='control-label' for='longURL'>Enter a URL:</label>
+        </div>
+        <div class='form-group'>
+          <input class='form-control' id='longURL' type='text' name='longURL' placeholder='http://'>
+        </div>
+        <div class='form-group'>
+          <input class='btn btn-primary' type='submit' value='Submit'>
+        </div>
+      </form>
+    </div>
   </body>
 
 </html>
