--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -6,29 +6,19 @@
 
   <body>
     <% include partials/_header %>
-    <div class='container'>
+    <div class='container text-center'>
       <h2>Register</h2>
       <form class='form-horizontal' action='/register' method='POST'>
         <div class='form-group'>
-          <label class='control-label col-sm-2' for='email'>Email:</label>
-          <div class='col-sm-6'>
+          <label class='control-label' for='email'>Email:</label>
             <input class='form-control' id='email' type="email" name="email" placeholder="Enter email">
-          </div>
-          <div class='col-sm-4'>
-          </div>
         </div>
         <div class='form-group'>
-          <label class='control-label col-sm-2' for='pwd'>Password:</label>
-          <div class='col-sm-6'>
-            <input class='form-control' id='pwd' type="password" name="password" placeholder="password">
-          </div>
-          <div class='col-sm-4'>
-          </div>
+          <label class='control-label' for='pwd'>Password:</label>
+          <input class='form-control' id='pwd' type="password" name="password" placeholder="password">
         </div>
         <div class='form-group'>
-          <div class='col-sm-offset-2 col-sm-10'>
-            <input class='btn btn-primary' type="submit" value="Register">
-          </div>
+          <input class='btn btn-primary' type="submit" value="Register">
         </div>
     <form action="/register" method="POST">
     </form>
