--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -8,20 +8,28 @@
 <body>
   <% include ./partials/_header %>
   <div>
-    <h2>Shortened URL</h2>
-    <% if(user && url.userId === user.id) { %>
-      <p>Here is the short URL:</p>
-      <li><%= shortUrl %> --> <%= url.longUrl %></li>
-      <form action='/urls/<%= shortUrl %>?_method=PUT' method='POST'>
-        <label for:"longURL">Enter an updated URL:</label>
-        <input id='longURL' type='text' name='longURL' value='<%= url.longUrl %>'>
-        <input class='btn-primary' type='submit' value='Update'>
-      </form>
-    <% } else { %>
-      <div class='text-center alert alert-info'>
-        <h2><strong>Login!</strong> You don't have permission to edit this URL</h2>
-    <% } %>
-      <a href="/urls"><p>Go Back to URLs</p></a>
+    <div class='container text-center'>
+      <h2>Shortened URL</h2>
+      <% if(user && url.userId === user.id) { %>
+        <h3>Here is the current URL:</h3>
+        <p><%= shortUrl %> --> <%= url.longUrl %></p>
+        <form class='form-horizontal' action='/urls/<%= shortUrl %>?_method=PUT' method='POST'>
+          <div class='form-group'>
+            <label class='control-label' for='longURL'>Enter an updated URL:</label>
+          </div>
+          <div class='form-group'>
+            <input class='form-control' id='longURL' type='text' name='longURL' value='<%= url.longUrl %>'>
+          </div>
+          <div class='form-group'>
+            <input class='btn btn-primary' type='submit' value='Update'>
+          </div>
+        </form>
+      <% } else { %>
+        <div class='text-center alert alert-info'>
+          <h2><strong>Login!</strong> You don't have permission to edit this URL</h2>
+      <% } %>
+        <a href="/urls"><p>Go Back to URLs</p></a>
+    </div>
   </div>
 </body>
 
