--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -4,9 +4,18 @@
       <h1>TinyApp <small><small>Create short URLs</small></small></h1>
     </div>
     <div class='pull-right align-bottom'>
-      <a> <% if(user) { %> <%=user.email%> <% } %> </a>
-      <a href='/login' class='btn btn-default' role='button'><% if(user) { %>Logout<% } else { %>Login<% } %></a>
-      <a href='/register' class='btn btn-default' role='button'>Register</a>
+      <% if(user) { %>
+        <form class='form-inline' action='/logout' method='POST'>
+          <a><%=user.email%></a>
+          <div class='form-group'>
+            <input class='btn btn-default' type='submit' value='Logout'>
+          </div>
+          <a href='/register' class='btn btn-default' role='button'>Register</a>
+        </form>
+      <% } else { %>
+        <a href='/login' class='btn btn-default' role='button'>Login</a>
+        <a href='/register' class='btn btn-default' role='button'>Register</a>
+      <% } %> </a>
     </div>
   </div>
 </div>
