--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -10,7 +10,7 @@
   <div>
     <div class='container text-center'>
       <h2>Shortened URL</h2>
-      <% if(user && url.userId === user.id) { %>
+      <% if(user && url.userId === user.id && url) { %>
         <h3>Here is the current URL:</h3>
         <p><%= shortUrl %> --> <%= url.longUrl %></p>
         <form class='form-horizontal' action='/urls/<%= shortUrl %>?_method=PUT' method='POST'>
@@ -24,11 +24,20 @@
             <input class='btn btn-primary' type='submit' value='Update'>
           </div>
         </form>
+      <% } else if (!url) { %>
+        <div class='text-center alert alert-danger'>
+          <h2><strong>Missing!</strong> This Short URL Does Not Exist.</h2>
+        </div>
+      <% } else if (!user || url.userId !== user.id) { %>
+        <div class='text-center alert alert-danger'>
+          <h2><strong>Error!</strong> You do not Have Permission to Edit This URL.</h2>
+        </div>
       <% } else { %>
         <div class='text-center alert alert-info'>
-          <h2><strong>Login!</strong> You don't have permission to edit this URL</h2>
+          <h2><strong>Login!</strong> Please Login to View This Page</h2>
+        </div>
       <% } %>
-        <a href="/urls"><p>Go Back to URLs</p></a>
+      <a href="/urls"><p>Go Back to URLs</p></a>
     </div>
   </div>
 </body>
