--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -3,39 +3,48 @@
 
 <head>
   <% include ./partials/_head %>
+  <style type="text/css">
+    li div {
+      display: inline-block;
+      padding: 20px;
+      margin: 0px;
+    }
+  </style>
 </head>
 
 <body>
   <% include ./partials/_header %>
-  <h2 class='text-center'>Your Shortened URLs:</h2>
-  <% if(user) {
-    urls.forEach( function(url) { %>
-    <div class='container text-center'>
-      <div class='row'>
-        <ul class='list-group'>
+  <div class='container text-center'>
+    <h2 class='text-center'>Your Shortened URLs:</h2>
+    <div class='row'>
+      <ul class='list-group'>
+      <% if(user) {
+        urls.forEach( function(url) { %>
           <li class='list-group-item'>
-            <div class='d-inline'>
-              <a><%= url.shortUrl %> --> <%= url.longUrl %></a>
-            </div>
-            <div class='d-inline'>
-              <a href='/urls/<%= url.shortUrl %>'>Edit</a>
-            </div>
-            <form class='form-inline' action='/urls/<%= url.shortUrl %>/delete?_method=DELETE' method='POST' value="Delete">
-              <div class='form-group'>
+            <div>
+              <h4><%= url.shortUrl %></h4>
+            </div><div>
+              <h4>&#8594;</h4>
+            </div><div>
+              <h4><%= url.longUrl %></h4>
+            </div><div>
+              <a href='/urls/<%= url.shortUrl %>'><h4>Edit</h4></a>
+            </div><div>
+              <form action='/urls/<%= url.shortUrl %>/delete?_method=DELETE' method='POST' value="Delete">
                 <input class='btn btn-danger' type='submit' value='Delete'>
-              </div>
-            </form>
+              </form>
+            </div>
           </li>
-        </ul>
-      </div>
+        <% }); %>
+      </ul>
     </div>
-  <% });
-  } else { %>
-    <div class='container'>
-      <div class='alert alert-info text-center'>
-        <h2><strong>Please Login!</strong></h2>
-      </div>
+  </div>
+  <% } else { %>
+  <div class='container'>
+    <div class='alert alert-info text-center'>
+      <h2><strong>Please Login!</strong></h2>
     </div>
+  </div>
   <% } %>
     <div class='container text-center'>
       <a href='/urls/new' class='text-center'>Create a New Short Link</a>
