--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -7,38 +7,35 @@
 
 <body>
   <% include ./partials/_header %>
-  <div>
-    <div class='container text-center'>
-      <h2>Shortened URL</h2>
-      <% if(user && url.userId === user.id && url) { %>
-        <h3>Here is the current URL:</h3>
-        <p><%= shortUrl %> --> <%= url.longUrl %></p>
-        <form class='form-horizontal' action='/urls/<%= shortUrl %>?_method=PUT' method='POST'>
-          <div class='form-group'>
-            <label class='control-label' for='longURL'>Enter an updated URL:</label>
-          </div>
-          <div class='form-group'>
-            <input class='form-control' id='longURL' type='text' name='longURL' value='<%= url.longUrl %>'>
-          </div>
-          <div class='form-group'>
-            <input class='btn btn-primary' type='submit' value='Update'>
-          </div>
-        </form>
-      <% } else if (!url) { %>
-        <div class='text-center alert alert-danger'>
-          <h2><strong>Missing!</strong> This Short URL Does Not Exist.</h2>
+  <div class='container text-center'>
+    <h2>Shortened URL</h2>
+    <% if(user && url.userId === user.id && url) { %>
+      <h4><%= shortUrl %> &#8594; <%= url.longUrl %></h4>
+      <form class='form-horizontal' action='/urls/<%= shortUrl %>?_method=PUT' method='POST'>
+        <div class='form-group'>
+          <label class='control-label' for='longURL'>Enter an updated URL:</label>
         </div>
-      <% } else if (!user || url.userId !== user.id) { %>
-        <div class='text-center alert alert-danger'>
-          <h2><strong>Error!</strong> You do not Have Permission to Edit This URL.</h2>
+        <div class='form-group'>
+          <input class='form-control' id='longURL' type='text' name='longURL' value='<%= url.longUrl %>'>
         </div>
-      <% } else { %>
-        <div class='text-center alert alert-info'>
-          <h2><strong>Login!</strong> Please Login to View This Page</h2>
+        <div class='form-group'>
+          <input class='btn btn-primary' type='submit' value='Update'>
         </div>
-      <% } %>
-      <a href="/urls"><p>Go Back to URLs</p></a>
-    </div>
+      </form>
+    <% } else if (!url) { %>
+      <div class='text-center alert alert-danger'>
+        <h2><strong>Missing!</strong> This Short URL Does Not Exist.</h2>
+      </div>
+    <% } else if (!user || url.userId !== user.id) { %>
+      <div class='text-center alert alert-danger'>
+        <h2><strong>Error!</strong> You do not Have Permission to Edit This URL.</h2>
+      </div>
+    <% } else { %>
+      <div class='text-center alert alert-info'>
+        <h2><strong>Login!</strong> Please Login to View This Page</h2>
+      </div>
+    <% } %>
+    <a href="/urls"><p>Go Back to URLs</p></a>
   </div>
 </body>
 
