--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -6,7 +6,7 @@
     <% include ./partials/_header %>
     <div class='container text-center'>
       <% if(!user) { %>
-       <h2>Login</h2>
+        <h2>Login</h2>
         <form class='form-horizontal' action='/login' method='POST'>
           <div class='form-group'>
             <label class='control-label' for='email'>Email:</label>
@@ -20,6 +20,11 @@
             <input class='btn btn-primary' type='submit' value='Login'>
           </div>
         </form>
+        <% if(failed) { %>
+          <div class='text-center alert alert-danger'>
+            <h5> Wrong Username or Password, Please Try Again.</h5>
+          </div>
+        <% } %>
       <% } else { %>
        <h2>Logout</h2>
         <form class='form-horizontal' action='/logout' method='POST'>
