Redirect message for failed registration and helper functions for finding a user and registering a user

--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -9,10 +9,10 @@
     <div class='container text-center'>
       <form class='form-horizontal' action='/urls' method='POST'>
         <div class='form-group'>
-          <label class='control-label' for='longURL'>Enter a URL:</label>
+          <label class='control-label' for='longUrl'>Enter a URL:</label>
         </div>
         <div class='form-group'>
-          <input class='form-control' id='longURL' type='text' name='longURL' placeholder='http://'>
+          <input class='form-control' id='longUrl' type='text' name='longUrl' placeholder='http://'>
         </div>
         <div class='form-group'>
           <input class='btn btn-primary' type='submit' value='Submit'>
