--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -10,7 +10,9 @@
   <div class='container text-center'>
     <h2>Shortened URL</h2>
     <% if(user && url.userId === user.id && url) { %>
-      <h4><%= shortUrl %> &#8594; <%= url.longUrl %></h4>
+      <div class='text-center alert alert-success'>
+        <h4><%= shortUrl %> &#8594; <%= url.longUrl %></h4>
+      </div>
       <form class='form-horizontal' action='/urls/<%= shortUrl %>?_method=PUT' method='POST'>
         <div class='form-group'>
           <label class='control-label' for='longURL'>Enter an updated URL:</label>
@@ -28,7 +30,7 @@
       </div>
     <% } else if (!user || url.userId !== user.id) { %>
       <div class='text-center alert alert-danger'>
-        <h2><strong>Error!</strong> You do not Have Permission to Edit This URL.</h2>
+        <h2>You Do Not Have Permission to Edit This URL.</h2>
       </div>
     <% } else { %>
       <div class='text-center alert alert-info'>
