Add a _footer partial and nested it within a footer tag on every page and nested the _header partial within a header tags for every page

--- a/views/partials/_head.ejs
+++ b/views/partials/_head.ejs
@@ -8,4 +8,7 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<style>
+ body { padding-bottom: 100px; }
+</style>
 
