--- a/views/urls_redirect.ejs
+++ b/views/urls_redirect.ejs
@@ -21,6 +21,11 @@
       <a href="/urls"><p>Go Back to URLs</p></a>
     </div>
   </div>
+  <footer class='footer'>
+    <div class='navbar navbar-fixed-bottom bg-primary'>
+      <% include ./partials/_footer %>
+    </div>
+  </footer>
 </body>
 
 </html>
