--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -39,6 +39,11 @@
     <% } %>
     <a href="/urls"><p>Go Back to URLs</p></a>
   </div>
+  <footer class='footer'>
+    <div class='navbar navbar-fixed-bottom bg-primary'>
+      <% include ./partials/_footer %>
+    </div>
+  </footer>
 </body>
 
 </html>
