--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <% include ./partials/_head %>
-  </head>
-    <% include ./partials/_header %>
-    <div class='container text-center'>
-      <% if(!user) { %>
-        <h2>Login</h2>
-        <form class='form-horizontal' action='/login' method='POST'>
-          <div class='form-group'>
-            <label class='control-label' for='email'>Email:</label>
-            <input class='form-control' id='email' type="email" name="email" placeholder="Enter email">
-          </div>
-          <div class='form-group'>
-            <label class='control-label' for='pwd'>Password:</label>
-            <input class='form-control' id='pwd' type="password" name="password" placeholder="password">
-          </div>
-          <div class='form-group'>
-            <input class='btn btn-primary' type='submit' value='Login'>
-          </div>
-        </form>
-        <% if(failed) { %>
-          <div class='text-center alert alert-danger'>
-            <h5> Wrong Username or Password, Please Try Again.</h5>
-          </div>
-        <% } %>
-      <% } else { %>
-       <h2>Logout</h2>
-        <form class='form-horizontal' action='/logout' method='POST'>
-          <div class='form-group'>
-            <input class='btn btn-primary' type='submit' value='Logout'>
-          </div>
-        </form>
+
+<head>
+  <% include ./partials/_head %>
+</head>
+
+<body>
+  <% include ./partials/_header %>
+  <div class='container text-center'>
+    <% if(!user) { %>
+      <h2>Login</h2>
+      <form class='form-horizontal' action='/login' method='POST'>
+        <div class='form-group'>
+          <label class='control-label' for='email'>Email:</label>
+          <input class='form-control' id='email' type="email" name="email" placeholder="Enter email">
+        </div>
+        <div class='form-group'>
+          <label class='control-label' for='pwd'>Password:</label>
+          <input class='form-control' id='pwd' type="password" name="password" placeholder="password">
+        </div>
+        <div class='form-group'>
+          <input class='btn btn-primary' type='submit' value='Login'>
+        </div>
+      </form>
+      <% if(failed) { %>
+        <div class='text-center alert alert-danger'>
+          <h5> Wrong Username or Password, Please Try Again.</h5>
+        </div>
       <% } %>
-  </body>
+    <% } else { %>
+     <h2>Logout</h2>
+      <form class='form-horizontal' action='/logout' method='POST'>
+        <div class='form-group'>
+          <input class='btn btn-primary' type='submit' value='Logout'>
+        </div>
+      </form>
+    <% } %>
+  <footer class='footer'>
+    <div class='navbar navbar-fixed-bottom bg-primary'>
+      <% include ./partials/_footer %>
+    </div>
+  </footer>
+</body>
 
 </html>
