Moved all footer and header tags to their respective partials and some minor refactoring of /urls/:id endpoints

--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,10 +1,12 @@
-<div class='container'>
-  <div class='align-bottom'>
-    <div class='pull-left'>
-      <h4>TinyApp</h4>
-    </div>
-    <div class='pull-right'>
-      <h4>2017</h4>
+<footer class='footer'>
+  <div class='navbar navbar-fixed-bottom' style='background-color: #eee'>
+    <div class='container align-bottom'>
+      <div class='pull-left'>
+        <h4>TinyApp</h4>
+      </div>
+      <div class='pull-right'>
+        <h4>2017</h4>
+      </div>
     </div>
   </div>
-</div>
+</footer>
