Minor appearance changes

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,7 +25,7 @@
             <div>
               <h4><%= url.shortUrl %></h4>
             </div><div>
-              <h4>&#8594;</h4>
+              <h4>&rarr;</h4>
             </div><div>
               <h4><%= url.longUrl %></h4>
             </div><div>
