Added total visits, unique visits, and visit history on edit page by modifying the GET on /u/:id

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -23,7 +23,7 @@
         urls.forEach( function(url) { %>
           <li class='list-group-item'>
             <div>
-              <h4><a href='<%= url.longUrl %>'><%= url.shortUrl %></a></h4>
+              <h4><a href='/u/<%= url.shortUrl %>'><%= url.shortUrl %></a></h4>
             </div><div>
               <h4>&rarr;</h4>
             </div><div>
