--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -38,7 +38,43 @@
         <h2><strong>Login!</strong> Please Login to Edit This Url</h2>
       </div>
     <% } %>
-    <p>Num Visits: <%= url.visits %></p>
+
+<div class="panel-group">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" href="#collapse1">URL Analytics</a>
+      </h4>
+    </div>
+    <div id="collapse1" class="panel-collapse collapse">
+      <ul class="list-group">
+        <li class="list-group-item">
+          <div class='row'>
+            <div class='col-sm-6'>
+              <p>Num Visits:</p>
+              <p><%= url.visits %></p>
+            </div>
+            <div class='col-sm-6'>
+               <p>Unique Visits:</p>
+               <p><%= url.visitors.length %></p>
+            </div>
+          </div>
+        </li>
+        <li class="list-group-item">
+          <div class='row'>
+            <div class='col-sm-12'>
+              <p>Visit History:</p>
+              <% url.history.forEach( function(visit) { %>
+              <p>Date: <%= visit[0] %>  |  Visitor Id: <%= visit[1] %></p>
+              <% }); %>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
     <h4><a href="/urls">Go Back to URLs</a></h4>
   </div>
 
