--- a/views/urls_redirect.ejs
+++ b/views/urls_redirect.ejs
@@ -12,7 +12,7 @@
     <div class='container text-center'>
       <% if(failed) { %>
         <div class='alert alert-danger'>
-          <h2><strong>Missing!</strong> We Do Not Have That URL in Our Database</h2>
+          <h5><strong>Error!</strong> Could Not Find URL</h5>
         </div>
       <% } else { %>
         <div class='alert alert-info'>
