--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -6,7 +6,8 @@
   <style type="text/css">
     li div {
       display: inline-block;
-      padding: 20px;
+      padding-left: 10px;
+      padding-right: 10px;
       margin: 0px;
     }
   </style>
@@ -17,7 +18,6 @@
 
   <div class='container text-center'>
     <h2 class='text-center'>Your Shortened URLs:</h2>
-    <div class='row'>
       <ul class='list-group'>
       <% if(user) {
         urls.forEach( function(url) { %>
@@ -38,14 +38,13 @@
           </li>
         <% }); %>
       </ul>
-    </div>
   </div>
   <% } else { %>
-  <div class='container'>
-    <div class='alert alert-info text-center'>
-      <h2><strong>Please Login!</strong></h2>
+    <div class='container text-center' style='padding-top: 20px'>
+      <div class='alert alert-info'>
+        <h5>Please Login to View URLs!</h5>
+      </div>
     </div>
-  </div>
   <% } %>
   <div class='container text-center'>
     <h4><a href='/urls/new' class='text-center'>Create a New Short Link</a></h4>
