--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -9,17 +9,21 @@
   <% include partials/_header %>
 
   <div class='container text-center'>
-    <form class='form-horizontal' action='/urls' method='POST'>
+    <h2>Create a URL</h2>
+    <form class='form-inline' action='/urls' method='POST'>
       <div class='form-group'>
         <label class='control-label' for='longUrl'>Enter a URL:</label>
       </div>
       <div class='form-group'>
-        <input class='form-control' id='longUrl' type='text' name='longUrl' placeholder='http://'>
+        <input class='form-control' id='longUrl' type='text' name='longUrl' style='width: 400px' placeholder='http://'>
       </div>
       <div class='form-group'>
         <input class='btn btn-primary' type='submit' value='Submit'>
       </div>
     </form>
+  </div>
+  <div class='container text-center'>
+    <h4><a href='/urls'>Go Back to URLs</a></h4>
   </div>
 
   <% include ./partials/_footer %>
