--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -10,22 +10,24 @@
 
   <div class='container text-center'>
     <h2>Register</h2>
-    <form class='form-horizontal' action='/register' method='POST'>
+    <form class='form-inline' action='/register' method='POST'>
       <div class='form-group'>
         <label class='control-label' for='email'>Email:</label>
         <input class='form-control' id='email' type="email" name="email" placeholder="Enter email">
       </div>
-      <div class='form-group'>
+      <div class='form-group' style='padding-left: 20px'>
         <label class='control-label' for='pwd'>Password:</label>
         <input class='form-control' id='pwd' type="password" name="password" placeholder="password">
       </div>
-      <div class='form-group'>
+      <div class='form-group' style='padding-left: 20px'>
         <input class='btn btn-primary' type="submit" value="Register">
       </div>
     </form>
     <% if(failed) { %>
-      <div class='text-center alert alert-danger'>
-        <h5> Username Taken or There Was an Empty Field.</h5>
+      <div class='container text-center' style='padding-top: 20px'>
+        <div class='text-center alert alert-danger'>
+          <h5> Username Taken or There Was an Empty Field.</h5>
+        </div>
       </div>
     <% } %>
   </div>
